--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = 'com.galega'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '23'
+    sourceCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
