--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=galega-ms-customer
 spring.datasource.url=jdbc:postgresql://localhost:5432/galega_burguer
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=postgres
