--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id "io.swagger.core.v3.swagger-gradle-plugin" version "2.2.21"
+	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.2.21'
 	id 'jacoco'
+	id 'org.sonarqube' version '3.5.0.2730'
 }
 
 group = 'com.galega'
