--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -1,49 +1,42 @@
-name: SonarQube Analysis
+name: SonarCloud Analysis
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
 
 jobs:
-  sonarcloud:
-    name: SonarCloud Analysis
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Baixar o código do repositório
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      # Configurar a versão do Java
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
+          java-version: '17'
           distribution: 'temurin'
-          java-version: 21
 
-      # Cache das dependências do Gradle
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
         with:
           path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle
+            ${{ runner.os }}-gradle-
 
-      - name: Grant execute permission for gradlew
+      - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      # Baixar as dependências do projeto
-      - name: Build project
-        run: ./gradlew build -x test
+      - name: Build with Gradle
+        run: ./gradlew build
 
-      # Executar os testes e gerar o relatório de cobertura
-      - name: Run tests with coverage
-        run: ./gradlew test jacocoTestReport
-
-      # Executar a análise do SonarCloud
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonar
