--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,15 @@ repositories {
 	mavenCentral()
 }
 
+sonarqube {
+	properties {
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.projectKey", "GabiGomess_galega-ms-customer"
+		property "sonar.organization", "GabiGomess"
+		property "sonar.login", System.getenv("SONAR_TOKEN")
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
