--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.2.21'
 	id 'jacoco'
-	id 'org.sonarqube' version '3.5.0.2730'
+	id "org.sonarqube" version "6.0.0.5145"
 }
 
 group = 'com.galega'
@@ -24,13 +24,12 @@ repositories {
 	mavenCentral()
 }
 
-sonarqube {
-	properties {
-		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.projectKey", "GabiGomess_galega-ms-customer"
-		property "sonar.organization", "GabiGomess"
-		property "sonar.login", System.getenv("SONAR_TOKEN")
-	}
+sonar {
+  properties {
+    property "sonar.projectKey", "GabiGomess_galega-ms-customer"
+    property "sonar.organization", "gabigomess"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 dependencies {
