--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.2.21'
-	id 'jacoco'
-	id "org.sonarqube" version "6.0.0.5145"
 }
 
 group = 'com.galega'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = '17'
+}
+
+jacoco {
+	toolVersion = "0.8.10"
 }
 
 configurations {
@@ -22,14 +25,6 @@ configurations {
 
 repositories {
 	mavenCentral()
-}
-
-sonar {
-  properties {
-    property "sonar.projectKey", "GabiGomess_galega-ms-customer"
-    property "sonar.organization", "gabigomess"
-    property "sonar.host.url", "https://sonarcloud.io"
-  }
 }
 
 dependencies {
@@ -44,16 +39,26 @@ dependencies {
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
 }
 
-test {
+tasks.test {
 	useJUnitPlatform()
-	finalizedBy jacocoTestReport
+	finalizedBy(tasks.jacocoTestReport) // Garante que o relatório seja gerado após os testes
 }
 
-jacocoTestReport{
-	dependsOn test
+tasks.jacocoTestReport {
+	dependsOn(tasks.test) // Garante que os testes sejam executados antes do relatório
 	reports {
-		xml.required = true
-		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-		csv.required = false
+		xml.required.set(true) // Necessário para integração com o SonarQube/SonarCloud
+		html.required.set(true) // Opcional, útil para visualizar o relatório localmente
+	}
+}
+
+tasks.jacocoTestCoverageVerification {
+	dependsOn(tasks.jacocoTestReport)
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.80 // Configura a cobertura mínima (80% neste caso)
+			}
+		}
 	}
 }
