--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,4 @@ sonar.tests=src/test/java
 sonar.java.binaries=build/classes/java/main
 sonar.junit.reportPaths=target/surefire-reports
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.exclusions=src/main/java/com/galega/customer/domain/entity/**/*.java,src/main/java/com/galega/customer/adapters/in/rest/dto/**/*.java
