--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=galega-ms-customer
+server.port=7777
 spring.datasource.url=jdbc:postgresql://localhost:5432/galega_burguer
 spring.datasource.username=postgres
 spring.datasource.password=postgres
